# esp32AppleHAPbt

./: CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.old
components/apple_hap_ble_interface/: CMakeLists.txt  gatt_svr.c  hap_ble_interface.c  hap_test.c  hap_util.c
components/apple_hap_ble_interface/include/: hap_ble_interface.h  hap_ids.h  hap_test.h  hap_util.h
components/custom_ble_sm/: CMakeLists.txt  custom_ble_sm.c
components/custom_ble_sm/include/: custom_ble_sm.h
customBluedroidSMP-deprecated/: CMakeLists.txt
customBluedroidSMP-deprecated/common/: bt_defs.h  bt_target.h  bt_trace.h  btm_api.h  btm_ble_api.h  btm_int.h  btu.h  dyn_mem.h  fixed_queue.h  hap_smp_api.h  hcidefs.h  l2c_api.h  thread.h
customBluedroidSMP-deprecated/smp/: hap_aes.c  hap_p_256_ecc_pp.c  hap_p_256_multprecision.c  hap_smp_act.c  hap_smp_api.c  hap_smp_br_main.c  hap_smp_cmac.c  hap_smp_keys.c  hap_smp_l2c.c  hap_smp_main.c  hap_smp_utils.c
customBluedroidSMP-deprecated/smp/include/: hap_p_256_ecc_pp.h  hap_p_256_multprecision.h  hap_smp_int.h
customBt/: CMakeLists.txt
customBt/smp/: hap_aes.c  hap_p_256_curvepara.c  hap_p_256_ecc_pp.c  hap_p_256_multprecision.c  hap_smp_act.c  hap_smp_api.c  hap_smp_br_main.c  hap_smp_cmac.c  hap_smp_keys.c  hap_smp_l2c.c  hap_smp_main.c  hap_smp_utils.c
customBt/smp/include/: hap_p_256_ecc_pp.h  hap_smp_int.h
customNimbleSMP/: CMakeLists.txt  ble_sm.c
main/: CMakeLists.txt  hello_world_main.c  main.c
main/hap/: hap_util.c
main/hap/include/: hap_ids.h  hap_util.h
test/: hap_test.c
test/include/: hap_test.h
